feat(admin): add promotional code CRUD management and microservice REST integration